# FastTarga

./: .gitignore  CMakeLists.txt  CMakePresets.json  FastTarga.i  FastTarga.sln  FastTarga.vcxproj  FastTarga.vcxproj.filters  License.txt  README.md  TargaImage.cpp  TargaImage.h  index.html  params.json
FastTarga/: CMakeLists.txt  TargaImage.cpp  TargaImage.h  TargaImageImpl.h
FastTargaTest/: CMakeLists.txt  Main.cpp
Project/: FastTarga.sln  FastTarga.vcxproj
Source/: FastTarga_CSharpWrap.cpp  TargaImage.cpp  TargaImage.h
stylesheets/: stylesheet.css
x64/Debug/: FastTarga.ilk  FastTargaTest.ilk  vc140.idb
x64/Debug/FastTarga.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FastTarga.lastbuildstate
x64/Debug/Temp/: vc140.idb
x64/Debug/Temp/FastTarga.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FastTarga.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
